--- a/src/main/resources/templates/EmailCadastro.html
+++ b/src/main/resources/templates/EmailCadastro.html
@@ -11,7 +11,7 @@
     <img src="https://i.imgur.com/9WAsKpZ.gif" style="width: 100%; max-width: 600px;">
     <h1 style="color: #333;">Bem-vindo(a) ao Nosso Sistema!</h1>
     <p>Olá</p>
-    <p>Seja bem-vindo ao nosso sistema! Estamos muito felizes em tê-lo(a) conosco.</p>
+    <p>Seja bem-vindo(a) ao nosso sistema! Estamos muito felizes em tê-lo(a) conosco.</p>
     <p>Queremos aproveitar esta oportunidade para agradecer por se juntar à nossa comunidade. Estamos empenhados em fornecer a você uma experiência incrível e valiosa em nossa plataforma.</p>
     <p>Com nosso sistema, você terá acesso a uma variedade de recursos e funcionalidades que foram projetados para facilitar sua vida e ajudá-lo a alcançar seus objetivos.</p>
     <p>Fique à vontade para explorar todos os recursos disponíveis e não hesite em nos contatar se precisar de ajuda ou tiver alguma dúvida. Estamos aqui para ajudar!</p>
